# MedQA

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: base.yaml
data/: corpus.json  labels.json
frontend/: app.py
frontend/pages/: 1_Analysis.py  2_Evaluation.py  3_Explorer.py
frontend/static/: styles.css
scripts/: build_index.py  evaluate.py
src/medqa/: __init__.py  config.py  log.py
src/medqa/api/: app.py  middleware.py  routes.py
src/medqa/data/: loader.py  vectorstore.py
src/medqa/evaluation/: baselines.py  evaluator.py  metrics.py
src/medqa/models/: embeddings.py  llm.py  schemas.py
src/medqa/pipeline/: generation.py  intent.py  orchestrator.py  retrieval.py  symptoms.py
tests/: conftest.py  test_pipeline.py  test_schemas.py
